syntax = "proto3";

package log;

option java_package = "com.devappsys.log";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "context.proto";


service EventService {
  rpc SendEvent (EventMessage) returns (Response);
  rpc SendEventList (EventList) returns (Response);
  rpc SendEventFile(EventFileRequest) returns (Response);
}

message EventList {
  repeated EventMessage events = 1;
}


message EventMessage {
  string eventID = 1;

  string eventName = 2;
  string screenName = 3;

  google.protobuf.Timestamp eventTime = 4;

  bool appOpened =5;
  bool appBackgrounded = 6;
  bool sessionStarted = 7;
  bool sessionEnded = 8;

  double latitude = 9;
  double longitude = 10;
  string city = 11;
  string region = 12;
  string country = 13;
  string carrier = 14;

  bool dynamicConfigChanged = 15;

  map<string, google.protobuf.Value> customAttributes = 16;
}

message EventFileRequest {
  string sessionID = 1;
  string fileName = 2;
  bytes fileContent = 3;
}
